--- a/style.css
+++ b/style.css
@@ -17,16 +17,18 @@ body {
   flex-direction: column;
   align-items: center;
   grid-area: main;
-  background-color: rgb(130, 176, 225);
+  background-color: rgb(207, 215, 223);
 }
 
-.main h1, h2, h3{
+.main h1,
+h2,
+h3 {
   margin-bottom: 0px;
 }
 
-.main-logo{
-  fill:white;
-  height:fit-content;
+.main-logo {
+  fill: white;
+  height: fit-content;
   height: 40rem;
   margin: 0px;
   padding: 0px;
@@ -70,4 +72,39 @@ form {
 .button-container button {
   margin-top: 10px;
   flex-grow: 1;
+}
+
+/* style to do */
+.to-do-wrapper {
+  border: solid 1px black;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 80%;
+  padding: 5px 30px;
+  margin-top: 10px;
+  border-radius: 5px;
+  gap: 10px;
+}
+
+.title-date-div {
+  display: flex;
+  flex-direction: column;
+}
+
+.title-span {
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
+.date-span {
+  font-size: 1rem;
+}
+
+.edit-to-do-button, .delete-to-do-button{
+  padding: 0.5rem 1rem;
+  border-radius: 0.3rem;
+}
+.edit-to-do-button {
+  margin-left: auto;
 }
