--- a/style.css
+++ b/style.css
@@ -101,7 +101,14 @@ form {
   font-size: 1rem;
 }
 
-.edit-to-do-button, .delete-to-do-button{
+.priority-span {
+  border: 1px solid black;
+  margin-left: 5rem;
+  padding: 0.5rem 3rem;
+}
+
+.edit-to-do-button,
+.delete-to-do-button {
   padding: 0.5rem 1rem;
   border-radius: 0.3rem;
 }
