--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   padding: 0px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: white;
 }
 
 .main-wrapper {
@@ -18,6 +19,7 @@ body {
   align-items: center;
   grid-area: main;
   background-color: rgb(207, 215, 223);
+  color: black;
 }
 
 .main h1,
@@ -27,7 +29,7 @@ h3 {
 }
 
 .main-logo {
-  fill: white;
+  fill: black;
   height: fit-content;
   height: 40rem;
   margin: 0px;
@@ -36,7 +38,7 @@ h3 {
 
 .nav-bar {
   grid-area: nav;
-  background-color: rgb(156, 200, 156);
+  background-color: rgb(57, 171, 57);
   padding: 20px 20px;
 }
 
@@ -58,6 +60,14 @@ h3 {
   font-size: 2rem;
 }
 
+.home-group {
+  cursor: pointer;
+}
+
+button {
+  cursor: pointer;
+}
+
 /* buttons */
 .add-to-do,
 .add-project {
@@ -65,8 +75,13 @@ h3 {
   margin-top: 1rem;
 }
 
-.current-project-button {
-  height: 2rem
+.current-project-button,
+.trash-project-button,
+.edit-to-do-button,
+.delete-to-do-button,
+.expand-button {
+  height: 2rem;
+  cursor: pointer;
 }
 
 /* list styling */
@@ -162,7 +177,7 @@ form {
   font-size: 1.5rem;
   font-weight: 600;
   border: solid black 1px;
-  padding: 0.5rem
+  padding: 0.5rem;
 }
 
 .div-container span {
@@ -174,6 +189,6 @@ form {
   width: 80%;
 }
 
-.div-container img{
+.div-container img {
   cursor: pointer;
 }
