--- a/style.css
+++ b/style.css
@@ -16,20 +16,25 @@ body {
 .main {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
   grid-area: main;
-  background-color: rgb(207, 215, 223);
+  background-color: rgb(255, 255, 255);
   color: black;
+  padding: 50px 100px;
 }
 
 .main h1,
-h2,
 h3 {
   margin-bottom: 0px;
+  align-self: center;
+}
+
+h3 {
+  font-size: 1.5rem;
 }
 
 .main-logo {
-  fill: black;
+  fill: rgb(127, 181, 192);
   height: fit-content;
   height: 40rem;
   margin: 0px;
@@ -38,7 +43,7 @@ h3 {
 
 .nav-bar {
   grid-area: nav;
-  background-color: rgb(57, 171, 57);
+  background-color: rgb(127, 181, 192);
   padding: 20px 20px;
 }
 
@@ -69,19 +74,32 @@ button {
 }
 
 /* buttons */
-.add-to-do,
-.add-project {
-  padding: 0.8rem;
-  margin-top: 1rem;
-}
 
-.current-project-button,
-.trash-project-button,
 .edit-to-do-button,
 .delete-to-do-button,
 .expand-button {
   height: 2rem;
   cursor: pointer;
+  border: 1px solid black;
+  padding: 0.3rem 0.5rem;
+  border-radius: 0.3rem;
+  background-color: white;
+}
+
+.delete-to-do-button {
+  background-color: rgb(220, 143, 143);
+  opacity: 0.5;
+}
+
+.edit-to-do-button {
+  background-color: rgb(111, 218, 111);
+  opacity: 0.5;
+}
+
+.edit-to-do-button:hover,
+.delete-to-do-button:hover {
+  opacity: 1;
+  transition: 0.5s;
 }
 
 /* list styling */
@@ -94,19 +112,51 @@ button {
   font-style: italic;
   padding: 0.5rem;
   border-radius: 0.2rem;
+  width: 80%;
 }
 
 .top-list li:hover {
-  background-color: rgb(72, 109, 72);
   cursor: pointer;
-  font-weight: bold;
+  font-weight: 700;
 }
 
 /* dialog styling */
+dialog {
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  background-color: #fff;
+  max-width: 500px;
+  width: 100%;
+  margin: auto;
+}
 
 form {
   display: flex;
   flex-direction: column;
+  gap: 15px;
+}
+
+form label {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+form input[type="text"],
+form textarea,
+form select,
+form input[type="date"] {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 1rem;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+form textarea {
+  resize: vertical;
 }
 
 .button-container {
@@ -115,26 +165,56 @@ form {
 }
 
 .button-container button {
-  margin-top: 10px;
-  flex-grow: 1;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.submit-to-do,
+.submit-project-to-do {
+  background-color: #4caf50;
+  color: white;
+}
+
+.submit-to-do:hover,
+.submit-project-to-do:hover {
+  background-color: #45a049;
+}
+
+.cancel-to-do,
+.cancel-project {
+  background-color: #f44336;
+  color: white;
+}
+
+.cancel-to-do:hover,
+.cancel-project:hover {
+  background-color: #e53935;
 }
 
 /* style to do */
 .to-do-wrapper {
   border: solid 1px black;
   display: flex;
-  justify-content: flex-start;
+  flex-wrap: wrap;
+  justify-content: space-between;
   align-items: center;
-  width: 80%;
-  padding: 5px 30px;
+  min-width: 50%;
+  padding: 15px 30px;
   margin-top: 10px;
   border-radius: 5px;
   gap: 10px;
+  background-color: #c1d4d7;
 }
 
 .title-date-div {
   display: flex;
   flex-direction: column;
+  flex: 1;
+  min-width: 200px;
 }
 
 .title-span {
@@ -148,17 +228,26 @@ form {
 
 .priority-span {
   border: 1px solid black;
-  margin-left: 5rem;
-  padding: 0.5rem 3rem;
+  padding: 0.5rem 0;
+  background-color: white;
+  width: 120px; /* Set a fixed width */
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 10px; /* Add some margin for spacing */
 }
 
+.details-span,
+.project-span {
+  flex-basis: 100%;
+}
+
+.expand-button,
 .edit-to-do-button,
 .delete-to-do-button {
-  padding: 0.5rem 1rem;
-  border-radius: 0.3rem;
-}
-.expand-button {
-  margin-left: auto;
+  flex: 0 0 auto;
+  margin-left: 10px;
 }
 
 /* Current projects */
@@ -173,22 +262,47 @@ form {
   margin-top: 0.5rem;
   align-items: center;
   justify-content: space-between;
-  width: 80%;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: 600;
   border: solid black 1px;
   padding: 0.5rem;
+  background-color: hsl(191, 74%, 37%);
 }
 
 .div-container span {
   padding: 0.5rem;
 }
 .div-container span:hover {
-  background-color: rgb(72, 109, 72);
   cursor: pointer;
-  width: 80%;
 }
 
 .div-container img {
   cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.711);
+  padding: 0.2rem;
+  height: 2rem;
+  margin: 3px;
+  border: 1px solid black;
+}
+
+.div-container img:hover {
+  background-color: white;
+}
+
+.add-to-do,
+.add-project {
+  padding: 0.8rem;
+  background-color: white;
+  color: rgb(0, 0, 0);
+  border: 3px solid #7fb5c0;
+  border-radius: 5px;
+  font-size: 1rem;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.add-to-do:hover,
+.add-project:hover {
+  border: 3px solid black;
 }
