--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@ form textarea {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   min-width: 50%;
   padding: 15px 30px;
   margin-top: 10px;
@@ -262,7 +262,7 @@ form textarea {
   margin-top: 0.5rem;
   align-items: center;
   justify-content: space-between;
-  font-size: 1.2rem;
+  font-size: 1.rem;
   font-weight: 600;
   border: solid black 1px;
   padding: 0.5rem;
