--- a/style.css
+++ b/style.css
@@ -208,7 +208,7 @@ form textarea {
   justify-content: space-between;
   align-items: fle;
   min-width: 50%;
-  padding: 15px 30px;
+  padding: 5px 10px;
   margin-top: 10px;
   border-radius: 5px;
   gap: 10px;
@@ -228,7 +228,8 @@ form textarea {
 }
 
 .date-span {
-  font-size: 1.2rem;
+  margin-bottom: 10px;
+  font-style: italic;
 }
 
 .priority-span {
@@ -243,7 +244,9 @@ form textarea {
   align-items: center;
   margin: 0 10px; /* Add some margin for spacing */
 }
-
+.details-span{
+  margin-bottom: 10px;
+}
 .details-span,
 .project-span {
   flex-basis: 100%;
